force-app/main/default/objects/OBInvoice__c/OBInvoice__c.object-meta.xml
<CustomObject>
    <label>OB Invoice</label>
    <nameField>
        <label>Invoice (New) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>