force-app/main/default/objects/OBInvoice__c/fields/Age_MINI_INV__c.field-meta.xml
<CustomField>
    <fullName>Age_MINI_INV__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (MINI INV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>