force-app/main/default/objects/OBInvoice__c/fields/AmountRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountRollup__c</fullName>
    <label>Amount Rollup</label>
    <summarizedField>OBInvoiceItem__c.TotalAmount__c</summarizedField>
    <summaryForeignKey>OBInvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>