force-app/main/default/objects/OBInvoice__c/fields/AmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>AmountWithoutTax__c</fullName>
    <formula>Amount__c - TaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>