force-app/main/default/objects/OBInvoice__c/fields/Correction_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Correction_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: CDS https://jira.orderbird.com/browse/CDS-2990</description>
    <label>Correction Invoice</label>
    <type>Checkbox</type>
</CustomField>