force-app/main/default/objects/OBInvoice__c/fields/Credit_Memo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Amount__c</fullName>
    <formula>IF( Transaction_Type__c = &apos;Credit Memo&apos; &amp;&amp; Amount__c &lt; 0, Amount__c * -1, Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>