force-app/main/default/objects/OBInvoice__c/fields/date_difference__c.field-meta.xml
<CustomField>
    <fullName>date_difference__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2968</description>
    <formula>DATEVALUE(CreatedDate) -  InvoiceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>