force-app/main/default/objects/OBInvoice__c/fields/First_Device_Registration__c.field-meta.xml
<CustomField>
    <fullName>First_Device_Registration__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3295</description>
    <label>First Device Registration</label>
    <type>Date</type>
</CustomField>