force-app/main/default/objects/OBInvoice__c/fields/HasBeenEmailed__c.field-meta.xml
<CustomField>
    <fullName>HasBeenEmailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Emailed</label>
    <type>Checkbox</type>
</CustomField>