force-app/main/default/objects/OBInvoice__c/fields/MismatchTotal__c.field-meta.xml
<CustomField>
    <fullName>MismatchTotal__c</fullName>
    <formula>ABS(Amount__c - AmountRollup__c) &gt; 0.009</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mismatch Total</label>
    <type>Checkbox</type>
</CustomField>