force-app/main/default/objects/OBInvoice__c/fields/NetsuiteSOID__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteSOID__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2457</description>
    <externalId>true</externalId>
    <inlineHelpText>What is the ID of the Salesorder in Netsuite, this Invoice was based of?</inlineHelpText>
    <label>Netsuite SO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>