force-app/main/default/objects/OBInvoice__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>OBInvoiceItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>OBInvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>