force-app/main/default/objects/OBInvoice__c/fields/TaxExemptReason__c.field-meta.xml
<CustomField>
    <fullName>TaxExemptReason__c</fullName>
    <label>Tax Exempt Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>