force-app/main/default/objects/OBInvoice__c/fields/Transaction_Label__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Label__c</fullName>
    <description>For Templates and such
Language as a condition not added yet</description>
    <formula>IF( Transaction_Type__c = &quot;Credit Memo&quot;, &quot;Gutschrift&quot;, &quot;Rechnung&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Label</label>
    <type>Text</type>
</CustomField>