force-app/main/default/objects/OBInvoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Attention__c</columns>
    <columns>Addressee__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Email__c</columns>
    <columns>Origin_Opportunity__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Label__c</columns>
    <columns>Credit_Memo_Amount__c</columns>
    <columns>NetsuiteSOID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>